--- a/scss/style.scss
+++ b/scss/style.scss
@@ -98,7 +98,7 @@ Main components
 	margin-right: 5%;
 	width: 44px;
 	height: 100%;
-	background: url('../img/cd-icon-menu.svg') no-repeat center center;
+	background: url('http://codyhouse.co/demo/alternate-fixed-scroll-background/img/cd-icon-menu.svg') no-repeat center center;
 	background-size: 44px 44px;
 	cursor: pointer;
 
@@ -193,19 +193,19 @@ Main components
 	}
 
 	&.cd-bg-1 {
-		background-image: url('../img/cd-background-1.jpg');
+		background-image: url('http://codyhouse.co/demo/alternate-fixed-scroll-background/img/cd-background-1.jpg');
 	}
 
 	&.cd-bg-2 {
-		background-image: url('../img/cd-background-2.jpg');
+		background-image: url('http://codyhouse.co/demo/alternate-fixed-scroll-background/img/cd-background-2.jpg');
 	}
 
 	&.cd-bg-3 {
-		background-image: url('../img/cd-background-3.jpg');
+		background-image: url('http://codyhouse.co/demo/alternate-fixed-scroll-background/img/cd-background-3.jpg');
 	}
 
 	&.cd-bg-4 {
-		background-image: url('../img/cd-background-4.jpg');
+		background-image: url('http://codyhouse.co/demo/alternate-fixed-scroll-background/img/cd-background-4.jpg');
 	}
 
 	@include MQ(M) {
