--- a/css/style.css
+++ b/css/style.css
@@ -90,7 +90,7 @@ Main components
   margin-right: 5%;
   width: 44px;
   height: 100%;/* Ian Pike */
-  background: url("http://codyhouse.co/demo/alternate-fixed-scroll-background/img/cd-icon-menu.svg") no-repeat center center;
+  background: url("../img/cd-icon-menu.svg") no-repeat center center;
   background-size: 44px 44px;
   cursor: pointer;
 }
@@ -202,16 +202,16 @@ Main components
   color: white;
 }
 .cd-fixed-bg.cd-bg-1 { /* ../img/cd-background-1.jpg */ /* Ian Pike*/
-  background-image: url("http://codyhouse.co/demo/alternate-fixed-scroll-background/img/cd-background-1.jpg");
+  background-image: url("../img/cd-background-1.jpg");
 }
 .cd-fixed-bg.cd-bg-2 {
-  background-image: url("http://codyhouse.co/demo/alternate-fixed-scroll-background/img/cd-background-2.jpg");
+  background-image: url("../img/cd-background-2.jpg");
 }
 .cd-fixed-bg.cd-bg-3 {
-  background-image: url("http://codyhouse.co/demo/alternate-fixed-scroll-background/img/cd-background-3.jpg");
+  background-image: url("../img/cd-background-3.jpg");
 }
 .cd-fixed-bg.cd-bg-4 {
-  background-image: url("http://codyhouse.co/demo/alternate-fixed-scroll-background/img/cd-background-4.jpg");
+  background-image: url("../img/cd-background-4.jpg");
 }
 @media only screen and (min-width: 768px) {
   .cd-fixed-bg h1, .cd-fixed-bg h2 {
