--- a/homepage.css
+++ b/homepage.css
@@ -1,22 +1,26 @@
 @import url(https://fonts.googleapis.com/css?family=Roboto:400,100,300);
 
-body, html {
-    background-color: #000;
-    font-family:"Roboto";
-    color: #fff;
-    width: 100%;
-    height: 100%;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-}
-canvas {
-    position:absolute;
-    top:0;
-    left:0
+body,
+html {
+  background-color: #000;
+  font-family: "Roboto";
+  color: #fff;
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
 }
 
-.menu{
+canvas {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 0;
+  pointer-events: none;
+}
+
+.menu {
   position: fixed;
   top: 0;
   left: 0;
@@ -29,66 +33,80 @@ canvas {
   transition: all 250ms;
   -webkit-transform: translateZ(0) translateX(-100%);
   transform: translateZ(0) translateX(-100%);
-  text-align:center;
+  text-align: center;
   box-shadow: 0 0 10px #000;
 }
 
-.active{
+.menu.active {
   transform: translateZ(0) translateX(0);
   transform: translateZ(0) translateX(0);
   -webkit-transition: 0.4s;
   transition: 0.4s;
+  opacity: 0.8;
 }
-h1{
-  margin-top:150px;
+
+h1 {
+  margin-top: 150px;
 }
-ul{
-  padding:0;
-  list-style:none;
-  font-size:14px;
+
+ul {
+  padding: 0;
+  list-style: none;
+  font-size: 14px;
 }
-li{
-  padding:7px 10px;
+
+li {
+  padding: 7px 10px;
 }
-a{
-  text-decoration:none;
-  padding:10px 15px;
-  color:#fff;
-  font-family:"Roboto";
+
+a {
+  text-decoration: none;
+  padding: 10px 15px;
+  color: #fff;
+  font-family: "Roboto";
   font-size: 18px;
   font-weight: 300;
 }
-a:hover{
+
+a:hover {
   text-decoration: line-through;
 }
-.content{
-  position:relative;
-  width:400px;
+
+.content {
+  position: relative;
+  width: 400px;
 }
-.button{
-  width:50px;
-  height:50px;
-  margin:70px 97px;
-  padding: 10px;
-  cursor:pointer;
+
+.line {
+  width: 40px;
+  height: 2px;
+  background-color: #fff;
+  transition: transform 0.3s ease, background 0.3s ease, opacity 0.3s ease, top 0.3s ease;
 }
-.line{
-	width: 40px;
-	height: 2px;
-  background-color:#fff;
-	transition: transform 0.3s ease, background 0.3s ease, opacity 0.3s ease, top 0.3s ease;
-}
-.line.first{
+
+.line.first {
   transform: translateX(-10px) translateY(22px) rotate(-90deg);
 }
-.line.second{
+
+.line.second {
   transform: translateX(-10px) translateY(19px) rotate(0deg);
 }
-.button.on .line.top{
-	width: 40px;
-	transform: translateX(-10px) translateY(20px) rotate(45deg);
+
+.button {
+  width: 50px;
+  height: 50px;
+  margin: 70px 97px;
+  padding: 10px;
+  cursor: pointer;
+  z-index: 32;
 }
-.button.on .line.bottom{
-	width: 40px;
-	transform: translateX(-10px) translateY(17px)rotate(-45deg);
+
+.button.on .line.top {
+  width: 40px;
+  transform: translateX(-10px) translateY(20px) rotate(45deg);
+}
+
+.button.on .line.bottom {
+  width: 40px;
+  transform: translateX(-10px) translateY(17px)rotate(-45deg);
 }
